Finished all the main setup (before the game), and start adding some more things to start the real game